# binance_momentum

./: .gitignore  pyproject.toml  requirements.txt
bot/: main.py  utils.py
bot/core/: risk.py  selection.py  signal.py
bot/data/: indicators.py  models.py  service.py  store.py
bot/execution/: exchange.py  manager.py  regime_exit.py
bot/infra/: notifications.py  safety.py
bot/optimization/: runner.py
scripts/: initial_optimization.py  seed_instruments.py
specs/: Momentum_DSS_v1.0.md  Momentum_EFHS_v1.0.md  Momentum_PBC_v2.2.md  Momentum_SAS_v1.0.md  Momentum_TMRIC_v1.0.md
